extends Node2D

signal area_click_released

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_bot_area_0_input_event(viewport, event, shape_idx):
	pass # Replace with function body.


func _on_bot_area_1_input_event(viewport, event, shape_idx):
	pass # Replace with function body.


func _on_bot_area_2_input_event(viewport, event, shape_idx):
	pass # Replace with function body.


func _on_bot_area_3_input_event(viewport, event, shape_idx):
	pass # Replace with function body.


func _on_bot_area_4_input_event(viewport, event, shape_idx):
	pass # Replace with function body.


func _on_bot_area_5_input_event(viewport, event, shape_idx):
	pass # Replace with function body.


func _on_bot_area_6_input_event(viewport, event, shape_idx):
	pass # Replace with function body.
